[package]
name = "fluid_particle_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1
# overflow-checks = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = 'abort'
debug = 0
strip = "debuginfo"
